# shat-gpt

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: config.yml
scripts/: load_into_db.py  make_dotenv.py  query_db.py  setup_db.py
src/shat_gpt/: __init__.py  app.py  llm_agent.py  openai_client.py  secrets.py  util.py  version.py
tests/: test_util.py
